ADA color contrast fix for header

--- a/style.css
+++ b/style.css
@@ -289,6 +289,7 @@ margin-top: 20px;
   max-width: 640px;
   margin: 0 auto 6rem auto;
   border-bottom: 0.2rem solid var(--main-white);
+  color: white;
 }
 
 @media (max-width: 28.75em) {
